[package]
authors = ["David Weis <dweis7@gmail.com>"]
description = "Collection of zenoh cli utilities based on the zenoh examples"
edition = "2021"
license = "EPL-2.0 OR Apache-2.0"
name = "zenoh-cli"
publish = false
readme = "README.md"
repository = "https://github.com/dmweis/zenoh-cli"
version = "0.11.0"

[[bin]]
name = "z_scout"

[[bin]]
name = "z_info"

[[bin]]
name = "z_put"

[[bin]]
name = "z_put_float"

[[bin]]
name = "z_delete"

[[bin]]
name = "z_pub"

[[bin]]
name = "z_pub_shm"

[[bin]]
name = "z_sub"

[[bin]]
name = "z_pull"

[[bin]]
name = "z_queryable"

[[bin]]
name = "z_storage"

[[bin]]
name = "z_get"

[[bin]]
name = "z_forward"

[[bin]]
name = "z_liveliness"

[[bin]]
name = "z_sub_liveliness"

[[bin]]
name = "z_get_liveliness"

[[bin]]
name = "z_pub_thr"

[[bin]]
name = "z_sub_thr"

[[bin]]
name = "z_pub_shm_thr"

[[bin]]
name = "z_ping"

[[bin]]
name = "z_pong"

[[bin]]
name = "z_formats"

# Debian package
[package.metadata.deb]
maintainer = "David Weis <dweis7@gmail.com>"
maintainer-scripts = "debian/"

[dependencies]
futures = "0.3.30"
rand = {version = "0.8.5", default-features = false, features = ["default"]}
tokio = { version = "1.38.0", features = ["full"] } 

clap = {version = "4.5.6", features = ["derive"]}

# zenoh
zenoh = {version = "0.11.0", features = ["shared-memory"]}
zenoh-config = "0.11.0"
zenoh-ext = "0.11.0"
zenoh-util = "0.11.0"
